--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.0.0-beta3",
     "vue": "^3.0.7",
     "vue-router": "^4.0.14"
   }
